# MapReduce

./: CMakeLists.txt  MapReduce.h  Mapper.h  Reader.h  Reducer.h  Shuffler.h  main.cxx
